; Analogous to https://dune.readthedocs.io/en/stable/dune-libs.html#configurator
; Just merges s-exp files based on the profile

(executable
 (name sexp_merge_configurator)
 (libraries str))

(rule
 (target executable.link_flags.sexp)
 (deps
  (glob_files %{project_root}/buildconfig/dune/executable/*.sexp))
 (action
  (with-stdout-to
   %{target}
   (run
    %{exe:sexp_merge_configurator.exe}
    "%{project_root}/buildconfig/dune/executable/"
    link_flags
    %{profile}))))
