; Windows port of fswatch.exe suitable for `dune --watch` that delegates to
; a Windows implementation of inotifywait.
; Honestly, it would be better to simply change Dune's code in
; https://github.com/ocaml/dune/blob/05b1a9a5cb4c10d3b9459b8f2222bebafc6a84ed/src/dune_file_watcher/dune_file_watcher.ml#L300-L305
; to try inotifywait directly.
; Please submit a PR, and consider this a temporary hack!

(executable
 (name fswatch)
 (libraries unix))
